--- a/circular-std-bold.css
+++ b/circular-std-bold.css
@@ -2,7 +2,7 @@
     font-family: 'Circular Std Bold';
     font-style: normal;
     font-weight: 700;
-    src: local('Circular Std Bold'), url('https://fonts.cdnfonts.com/s/14289/CircularStd-Bold.woff') format('woff');
+    src: local('Circular Std Bold'), url('/CircularStd-Bold.woff') format('woff');
 }
 
 
