--- a/circular-std-book.css
+++ b/circular-std-book.css
@@ -2,7 +2,7 @@
     font-family: 'Circular Std Book';
     font-style: normal;
     font-weight: 450;
-    src: local('Circular Std Book'), url('https://fonts.cdnfonts.com/s/14289/CircularStd-Book.woff') format('woff');
+    src: local('Circular Std Book'), url('/CircularStd-Book.woff') format('woff');
 }
 
 
