--- a/circular-std-mediumcss.css
+++ b/circular-std-mediumcss.css
@@ -2,7 +2,7 @@
     font-family: 'Circular Std Medium';
     font-style: normal;
     font-weight: 500;
-    src: local('Circular Std Medium'), url('https://fonts.cdnfonts.com/s/14289/CircularStd-Medium.woff') format('woff');
+    src: local('Circular Std Medium'), url('/CircularStd-Medium.woff') format('woff');
 }
 
 
