--- a/circular-std-bold.css
+++ b/circular-std-bold.css
@@ -1,8 +1,6 @@
 @font-face {
     font-family: 'Circular Std Bold';
     font-style: normal;
-    font-weight: 700;
-    src: local('Circular Std Bold'), url('/CircularStd-Bold.woff') format('woff');
+    font-weight: 400;
+    src: local('Circular Std Bold'), url('https://github.com/krjayesh/Circular-Std/blob/main/CircularStd-Bold.woff?raw=true') format('woff');
 }
-
-
